--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
         implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
         androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:3.0.1"
     }
+
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
