--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.app.pking.bakingapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/icon_cake_tart"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon_cake_tart"
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.DetailsActivity"
-            android:parentActivityName=".ui.MainActivity">
+            android:parentActivityName=".ui.MainActivity"
+            tools:targetApi="jelly_bean">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -27,7 +28,8 @@
         </activity>
 
         <activity android:name=".ui.StepActivity"
-            android:parentActivityName=".ui.DetailsActivity" >
+            android:parentActivityName=".ui.DetailsActivity"
+            tools:targetApi="jelly_bean">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
